--- a/styles/style.css
+++ b/styles/style.css
@@ -9,23 +9,323 @@
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
+.no-margin{
+  margin: 0;
+}
+
+/*Блок header*/
 .header {
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  position: relative;
+  display:flex;
   /* выше установили ограничения для секции */
+  background-color: #f2f2f2;
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
-.header__square-pic {
-  height: 568px;
+.header__title{
+  width:730px;
+  margin: auto auto auto 64px;
+  line-height: 102px;
+  font-size: 96px;
+  font-weight: bold;
+}
+
+.header__subtitle{
+  width: 388px;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  position: absolute;
+  left: 64px;
+  bottom: 30px;
+}
+.header__link{
+  color: #2f80ed;
+  text-decoration: none;
+}
+.header__main-illustration{
+  position: absolute;
+  width: 765px;
+  height: 608px;
+  z-index: 2;
+  background-image: url(../images/header-image.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: right bottom;
+  right: 0;
+  bottom: 0;
+}
+
+.header__square-pic{
   width: 568px;
+  height: 568px;
+  background-color: #2f80ed;
+  position: absolute;
+  top:64px;
+  right: 0;
 }
 
-/* и элемента с модификатором вида ключ-значение */
-.table__cell_theme_dark {
-  width: 200px;
+/*Логотип*/
+
+.logo{
+  background-image: url(../images/logo_place_header.svg);
+  width: 183px;
+  height: 32px;
+  z-index: 3;
+}
+
+.logo_header-place{
+  position: absolute;
+  top: 30px;
+  left: 64px;
+}
+
+.logo_footer_place{
+  position: absolute;
+}
+
+/*Блок .description*/
+.content_description{
+  margin-top: 100px;
+}
+
+.description{
+  display: flex;
+}
+
+.two-columns{
+  margin: auto;
+  width:80%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.two-columns__brief{
+  color: #2f80ed;
+  width: 175px;
+  font-size: 18px;
+  line-height: 1.2em;
+  font-weight: normal;
+}
+
+.two-columns__main-text{
+  width: 80%;
+  min-width: 784px;min-width: 784px;
+  
+}
+
+.two-columns__main-text p:nth-child(-n+2){
+  margin-bottom: 30px;
+}
+
+.two-columns-paragraph{
+  line-height: 34px;
+  font-size: 24px;
+}
+
+/*Блок digits*/
+.content_digits{
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+
+.section-title{
+   width:60%;
+   margin: 0 auto 20px auto;
+   line-height: 1.15em;
+   font-size: 60px;
+   font-weight: bold;
+   text-align: center;
+}
+
+.section-subtitle{
+  width: 60%;
+  margin: 0 auto 60px auto;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  text-align: center;
+}
+
+.table{
+  display: flex;
+  width: 1100px;
+  margin: 0 auto 0 auto;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  position: relative;
+  z-index: 2;
+}
+
+.table div:nth-child(-n+4){
+  margin-bottom: 60px;
+}
+
+.table__cell{
+  width: 250px;
+}
+
+.table__heading{
+  line-height: 1.15em;
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.table__text{
+  line-height: 1.2em;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.table__quote{
+  display: block;
+  margin-top: 20px;
+}
+
+/*Блок feynman*/
+.feynman{
+  background-color: #f2f2f2;
+  background-image: url(../images/feynman.png);
+  background-size: 867px 637px;
+  background-repeat: no-repeat;
+  background-position: left bottom;
+  position: relative;
+  height: 790px;
+
+}
+
+.feynman__title{
+  font-size: 120px;
+  line-height: 1.15em;
+  font-weight: bold;
+  text-align: center;
+  width:648px;
+  margin: 0 auto;
+  padding-top: 100px;
+}
+
+.feynman__subtitle{
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  display: block;
+  text-align: center;
+  margin-top: 70px;
+  padding: 0;
+}
+
+.feynman__link{
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  position: absolute;
+  top: 50%;
+  right: 0;
+  color: black;
+  text-decoration: none;
+}
+
+/*Блок kaufman*/
+.kaufman{
+  background-color: #1f1f1f;
+  margin-top: 100px;
+  padding: 90px 0;
+  position: relative;
+  overflow: hidden;
+  z-index: 0;
+}
+
+.kaufman__triangle{
+  position: absolute;
+  right: -210px;
+  top:0;
+  
+}
+
+.section-title_theme_dark{
   color: white;
-  margin-right: 0;
-  margin-top: 80px;
+}
+
+.section-subtitle_theme_dark{
+  color:white;
+  margin-bottom: 80px;
+}
+
+.cell_theme_dark{
+  width:200px;
+}
+.table__heading_theme_dark{
+  color: white;
+}
+.table__text_theme_dark{
+  color: white;
+}
+
+
+/*Блок footer*/
+.footer{
+  padding: 60px 0 40px 0;
+  min-height: 350px;
+  background-color: #1f1f1f;
+}
+
+.footer__columns{
+  width:90%;
+  min-height: 350px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer__column_content_copyright{
+  display: flex;
+  flex-basis: 711px;
+}
+.footer__author{
+  color: white;
+  align-self: flex-end;
+  line-height: 25px;
+  font-size: 18px;
+}
+
+.footer__column-heading{
+  color: white;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.footer__column_content_info{
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__column_content_social{
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__column-links{
+  color: white;
+  text-decoration: none;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.footer__social-links{
+  color: white;
+  text-decoration: none;
+  display: flex;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+  align-items: center;
+}
+
+.footer__social-icon{
+  padding-right: 10px;
 }
