--- a/styles/style.css
+++ b/styles/style.css
@@ -187,14 +187,14 @@
 
 /*Блок feynman*/
 .feynman{
+  height: 790px;
   background-color: #f2f2f2;
   background-image: url(../images/feynman.png);
   background-size: 867px 637px;
   background-repeat: no-repeat;
-  background-position: left bottom;
+  background-position: bottom left;
   position: relative;
-  height: 790px;
-
+  padding-top:100px;
 }
 
 .feynman__title{
@@ -203,8 +203,7 @@
   font-weight: bold;
   text-align: center;
   width:648px;
-  margin: 0 auto;
-  padding-top: 100px;
+  margin: 100px auto 70px auto;
 }
 
 .feynman__subtitle{
@@ -213,7 +212,6 @@
   font-weight: normal;
   display: block;
   text-align: center;
-  margin-top: 70px;
   padding: 0;
 }
 
