--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@
   /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
-  font-family: 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Helvetica Neue', 'Arial', sans-serif;
 }
 
 .no-margin{
@@ -27,8 +27,8 @@
 .header__title{
   width:730px;
   margin: auto auto auto 64px;
-  line-height: 102px;
-  font-size: 96px;
+  line-height: 96px;
+  font-size: 102px;
   font-weight: bold;
 }
 
@@ -70,20 +70,23 @@
 /*Логотип*/
 
 .logo{
-  background-image: url(../images/logo_place_header.svg);
   width: 183px;
   height: 32px;
   z-index: 3;
 }
 
-.logo_header-place{
+.logo_place_header{
+  background-image: url(../images/logo_place_header.svg);
   position: absolute;
   top: 30px;
   left: 64px;
 }
 
-.logo_footer_place{
+.logo_place_footer{
+  background-image: url(../images/logo_place_footer.svg);
   position: absolute;
+  top: 0;
+  left: 0;
 }
 
 /*Блок .description*/
@@ -112,17 +115,21 @@
 
 .two-columns__main-text{
   width: 80%;
-  min-width: 784px;min-width: 784px;
-  
+  min-width: 784px;
 }
 
 .two-columns__main-text p:nth-child(-n+2){
   margin-bottom: 30px;
 }
 
-.two-columns-paragraph{
+.two-columns__paragraph{
   line-height: 34px;
   font-size: 24px;
+  font-weight: normal;
+}
+
+.two-columns__span-accent{
+  font-weight: bold;
 }
 
 /*Блок digits*/
@@ -178,6 +185,7 @@
   line-height: 1.2em;
   font-size: 18px;
   font-weight: normal;
+
 }
 
 .table__quote{
@@ -187,14 +195,14 @@
 
 /*Блок feynman*/
 .feynman{
-  height: 790px;
   background-color: #f2f2f2;
   background-image: url(../images/feynman.png);
   background-size: 867px 637px;
   background-repeat: no-repeat;
-  background-position: bottom left;
+  background-position: left bottom;
   position: relative;
-  padding-top:100px;
+  height: 790px;
+
 }
 
 .feynman__title{
@@ -203,7 +211,8 @@
   font-weight: bold;
   text-align: center;
   width:648px;
-  margin: 100px auto 70px auto;
+  margin: 0 auto;
+  padding-top: 100px;
 }
 
 .feynman__subtitle{
@@ -212,6 +221,7 @@
   font-weight: normal;
   display: block;
   text-align: center;
+  margin-top: 70px;
   padding: 0;
 }
 
@@ -221,7 +231,7 @@
   font-weight: normal;
   position: absolute;
   top: 50%;
-  right: 0;
+  right: 48px;
   color: black;
   text-decoration: none;
 }
@@ -229,7 +239,6 @@
 /*Блок kaufman*/
 .kaufman{
   background-color: #1f1f1f;
-  margin-top: 100px;
   padding: 90px 0;
   position: relative;
   overflow: hidden;
@@ -281,12 +290,14 @@
 .footer__column_content_copyright{
   display: flex;
   flex-basis: 711px;
+  flex-direction: row;
+  position: relative;
 }
 .footer__author{
   color: white;
-  align-self: flex-end;
   line-height: 25px;
   font-size: 18px;
+  align-self: flex-end;
 }
 
 .footer__column-heading{
@@ -294,6 +305,8 @@
   line-height: 30px;
   font-size: 18px;
   font-weight: bold;
+  margin-bottom: 20px;
+  margin-top:0px;
 }
 
 .footer__column_content_info{
