--- a/styles/style.css
+++ b/styles/style.css
@@ -84,9 +84,6 @@
 
 .logo_place_footer{
   background-image: url(../images/logo_place_footer.svg);
-  position: absolute;
-  top: 0;
-  left: 0;
 }
 
 /*Блок .description*/
@@ -290,14 +287,16 @@
 .footer__column_content_copyright{
   display: flex;
   flex-basis: 711px;
-  flex-direction: row;
-  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .footer__author{
   color: white;
   line-height: 25px;
   font-size: 18px;
-  align-self: flex-end;
+  margin: 0;
+  padding: 18px 0 18px 0;
 }
 
 .footer__column-heading{
