--- a/blocks/feynman/__link/feynman__link.css
+++ b/blocks/feynman/__link/feynman__link.css
@@ -7,4 +7,9 @@
   right: 48px;
   color: black;
   text-decoration: none;
+  transition: opacity 0.5s;
+}
+
+.feynman__link:hover{
+  opacity: 0.5;
 }
