--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -1,8 +1,3 @@
-@import url(__title/feynman__title.css);
-@import url(__subtitle/feynman__subtitle.css);
-@import url(__link/feynman__link.css);
-
-
 .feynman{
   background-color: #f2f2f2;
   background-image: url(../../images/feynman.png);
@@ -11,4 +6,5 @@
   background-position: left bottom;
   position: relative;
   height: 790px;
+  padding-top: 50px;
 }
