--- a/blocks/footer/__column-links/footer__column-links.css
+++ b/blocks/footer/__column-links/footer__column-links.css
@@ -4,4 +4,9 @@
   line-height: 30px;
   font-size: 18px;
   font-weight: normal;
+  transition: opacity 0.5s;
+}
+
+.footer__column-links:hover{
+  opacity: 0.5;
 }
