--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,9 +1,3 @@
-@import url(__link/header__link.css);
-@import url(__main-illustration/header__main-illustration.css);
-@import url(__square-pic/header__square-pic.css);
-@import url(__subtitle/header___subtitle.css);
-@import url(__title/header__title.css);
-
 .header {
   height: 100vh;
   min-height: 600px;
@@ -12,4 +6,5 @@
   display:flex;
   /* выше установили ограничения для секции */
   background-color: #f2f2f2;
+  overflow: hidden;
 }
