--- a/blocks/section-subtitle/section-subtitle.css
+++ b/blocks/section-subtitle/section-subtitle.css
@@ -1,8 +1,6 @@
-@import url(_theme_dark/section-subtitle_theme_dark.css);
-
 .section-subtitle{
   width: 60%;
-  margin: 0 auto 60px auto;
+  margin: 0 auto;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
