--- a/blocks/table/table.css
+++ b/blocks/table/table.css
@@ -1,20 +1,15 @@
-@import url(__cell/table__cell.css);
-@import url(__heading/table__heading.css);
-@import url(__text/table__text.css);
-@import url(__quote/table__quote.css);
-
 .table{
-    display: flex;
-    width: 1100px;
-    margin: 0 auto 0 auto;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    position: relative;
-    z-index: 2;
-  }
+  display: flex;
+  width: 1100px;
+  margin: 60px auto 0 auto;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  position: relative;
+  z-index: 2;
+}
 
-  .table div:nth-child(-n+4){
-    margin-bottom: 60px;
-  }
+.table div:nth-child(-n+4){
+  margin-bottom: 60px;
+}
 
   
