--- a/blocks/two-columns/two-columns.css
+++ b/blocks/two-columns/two-columns.css
@@ -1,11 +1,10 @@
-@import url(__brief/two-columns__brief.css);
-@import url(__main-text/two-columns__main-text.css);
-@import url(__paragraph/two_columns__paragraph.css);
-@import url(__span-accent/two-columns__span-accent.css);
-
 .two-columns{
-    margin: auto;
-    width:80%;
-    display: flex;
-    justify-content: space-between;
-  }
+  margin: auto;
+  width:80%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.two-columns__main-text p:nth-child(-n+2){
+  margin-bottom: 30px;
+}
