--- a/pages/index.css
+++ b/pages/index.css
@@ -1,3 +1,6 @@
+/*Rotation*/
+@import url(../blocks/rotation/rotation.css);
+
 /*Header*/
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__link/header__link.css);
@@ -5,12 +8,11 @@
 @import url(../blocks/header/__square-pic/header__square-pic.css);
 @import url(../blocks/header/__subtitle/header___subtitle.css);
 @import url(../blocks/header/__title/header__title.css);
-
+@import url(../blocks/header/__square-pic/_rotation/header__square-pic_rotation.css);
 /*Logo*/
 @import url(../blocks/logo/logo.css);
 @import url(../blocks/logo/_place_header/logo_place_header.css);
 @import url(../blocks/logo/_place_footer/.logo_place_footer.css);
-
 
 /*Description*/
 @import url(../blocks/description/description.css);
@@ -52,6 +54,7 @@
 /*Kaufman*/
 @import url(../blocks/kaufman/kaufman.css);
 @import url(../blocks/kaufman/__triangle/kaufman__triangle.css);
+@import url(../blocks/kaufman/__triangle/_rotation/kaufman__triangle_rotation.css);
 
 /*Footer*/
 @import url(../blocks/footer/footer.css);
@@ -66,8 +69,41 @@
 @import url(../blocks/footer/__social-links/footer__social-links.css);
 @import url(../blocks/footer/__author/footer__author.css);
 
-/*Rotation*/
-@import url(../blocks/rotation/rotation.css);
+/*Techniques*/
+@import url(../blocks/techniques/techniques.css);
+
+/*Cards*/
+@import url(../blocks/cards/cards.css);
+@import url(../blocks/cards/__item/cards__item.css);
+@import url(../blocks/cards/__image/cards__image.css);
+@import url(../blocks/cards/__title/cards__title.css);
+@import url(../blocks/cards/__description/cards__description.css);
+
+
+/*video*/
+@import url(../blocks/video/video.css);
+@import url(../blocks/video/__iframes/video__iframes.css);
+@import url(../blocks/video/__iframe/video__iframe.css);
+
+/*oakley*/
+@import url(../blocks/oakley/oakley.css);
+
+/*khan*/
+@import url(../blocks/khan/khan.css);
+@import url(../blocks/khan/__container/khan__container.css);
+@import url(../blocks/khan/__author/khan__author.css);
+@import url(../blocks/khan/__title/khan__title.css);
+@import url(../blocks/khan/__quote/khan__quote.css);
+@import url(../blocks/khan/__quote-author/khan__quote-author.css);
+@import url(../blocks/khan/__quote-author-subline/khan__quote-author-subline.css);
+@import url(../blocks/khan/__book-container/khan__book-container.css);
+@import url(../blocks/khan/__book-pic/khan__book-pic.css);
+@import url(../blocks/khan/__buy-link/khan__buy-link.css);
+
+/*resources*/
+@import url(../blocks/resources/resources.css);
+@import url(../blocks/resources/__logo-zone/resources__logo-zone.css);
+@import url(../blocks/resources/__logo/resources__logo.css);
 
 
 .page {
@@ -79,174 +115,4 @@
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: 'Helvetica Neue', 'Arial', sans-serif;
-}
-
-.header__square-pic_rotation{
-    animation-duration: 20s;
-}
-
-.techniques{  
-    width: 80%;
-    margin: 100px auto 0 auto;
-}
-
-.cards{
-    display: flex;
-    width: 920px;
-    margin: 0 auto 0 auto;
-    flex-wrap: wrap;
-}
-
-.cards__item{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    width: 240px
-}
-
-.cards .cards__item:nth-child(2){
-    margin: 0 100px 0 100px;
-}
-
-.cards .cards__item:nth-child(5){
-    margin: 0 100px 0 100px;
-}
-
-.cards__image{
-    margin: 60px 40px 43px 40px;
-    width: 160px;
-    height: 160px;
-    border-radius: 50%;
-}
-
-.cards__title{
-    line-height: 1.15em;
-    font-size: 24px;
-    font-weight: bold;
-}
-
-.card__description{
-    line-height: 23px;
-    font-size: 18px;
-    font-weight: normal;
-}
-
-.video{
-    margin-top: 100px;
-}
-
-.video__iframes{
-    margin-top: 50px;
-    display: flex;
-    justify-content: center;
-}
-
-.video__iframes .video__iframe:nth-child(1){
-    margin-right: 20px;
-}
-
-.video__iframe{
-    position: relative;
-    z-index: 1;
-}
-
-.oakley{
-    background-color: #f2f2f2;
-    padding-top: 160px;
-    position: relative;
-    margin-top: -50px;
-    z-index: 0;
-}
-
-.khan{
-    padding-top: 105px;
-    margin: 0 auto 0 auto;
-    background-color: #f2f2f2;
-    display: flex;
-    justify-content: center;
-}
-
-.khan__container{
-    width: 80%;
-}
-
-.khan__author{
-    margin: 0;
-    line-height: 42px;
-    font-size: 30px;
-    font-weight: normal;
-}
-
-.khan__title{
-    margin: 0;
-    line-height: 1.15em;
-    font-size: 60px;
-    font-weight: bold;
-}
-
-.khan__quote{
-    width: 790px;
-    margin: 50px 0 36px 0;
-    line-height: 34px;
-    font-size: 24px;
-    font-weight: normal;
-}
-
-.khan__quote-author{
-    line-height: 1.15em;
-    font-size: 24px;
-    font-weight: bold;
-    margin: 0;
-}
-
-.khan__quote-author-subline{
-    line-height: 1.15em;
-    font-size: 24px;
-    font-weight: normal;
-    margin: 10px 0 68px 0;
-}
-
-.khan__book-container{
-    display: flex;
-}
-
-.khan__book-pic{
-    margin: 0 48px -90px 0;
-    width: 620px;
-    height: 608px;
-}
-
-.khan__buy-link{
-    line-height: 42px;
-    font-size: 30px;
-    font-weight: normal;
-    text-decoration: none;
-    opacity: 1;
-    transition: opacity 1s;
-    color: #2f80ed;
-}
-
-.khan__buy-link:hover{
-    opacity: 0.5;
-}
-
-.kaufman__triangle_rotation{
-    animation-duration: 20s ;
-}
-
-.resources{
-    padding: 100px 0;
-}
-
-.resources__logo-zone{
-    display: flex;
-    width: 1100px;
-    margin: 80px auto 0 auto;
-    justify-content: center;
-}
-
-.resources__logo{
-    width:270px;
-    height: 38px;
 }
