--- a/blocks/khan/__book-pic/khan__book-pic.css
+++ b/blocks/khan/__book-pic/khan__book-pic.css
@@ -1,5 +1,7 @@
 .khan__book-pic{
     margin: 0 48px -90px 0;
-    width: 620px;
+    max-width: 620px;
     height: 608px;
+    object-fit: contain;
+    object-position: left;
 }
