--- a/blocks/table/__quote/table__quote.css
+++ b/blocks/table/__quote/table__quote.css
@@ -1,4 +1,7 @@
 .table__quote{
   display: block;
-  margin-top: 20px;
+  margin: 20px 0 0 0;
+  line-height: 1.2em;
+  font-size: 18px;
+  font-weight: normal;
 }
