--- a/blocks/two-columns/two-columns.css
+++ b/blocks/two-columns/two-columns.css
@@ -5,6 +5,6 @@
   justify-content: space-between;
 }
 
-.two-columns__main-text p:nth-child(-n+2){
+.two-columns__main-text .two-columns__paragraph:nth-child(-n+2){
   margin-bottom: 30px;
 }
