--- a/pages/index.css
+++ b/pages/index.css
@@ -6,43 +6,43 @@
 @import url(../blocks/header/__link/header__link.css);
 @import url(../blocks/header/__main-illustration/header__main-illustration.css);
 @import url(../blocks/header/__square-pic/header__square-pic.css);
-@import url(../blocks/header/__subtitle/header___subtitle.css);
+@import url(../blocks/header/__subtitle/header__subtitle.css);
 @import url(../blocks/header/__title/header__title.css);
-@import url(../blocks/header/__square-pic/_rotation/header__square-pic_rotation.css);
+
 /*Logo*/
 @import url(../blocks/logo/logo.css);
-@import url(../blocks/logo/_place_header/logo_place_header.css);
-@import url(../blocks/logo/_place_footer/.logo_place_footer.css);
+@import url(../blocks/logo/_place/_header/logo_place_header.css);
+@import url(../blocks/logo/_place/_footer/logo_place_footer.css);
 
 /*Description*/
 @import url(../blocks/description/description.css);
 
-/*Content*/
-@import url(../blocks/content/_description/content_description.css);
-@import url(../blocks/content/_digits/content_digits.css);
+/*digits*/
+@import url(../blocks/digits/digits.css);
 
 /*Two columns*/
 @import url(../blocks/two-columns/two-columns.css);
 @import url(../blocks/two-columns/__brief/two-columns__brief.css);
 @import url(../blocks/two-columns/__main-text/two-columns__main-text.css);
-@import url(../blocks/two-columns/__paragraph/two_columns__paragraph.css);
+@import url(../blocks/two-columns/__paragraph/two-columns__paragraph.css);
 @import url(../blocks/two-columns/__span-accent/two-columns__span-accent.css);
 
 /*Section-title*/
 @import url(../blocks/section-title/section-title.css);
-@import url(../blocks/section-title/_theme_dark/section-title_theme_dark.css);
+@import url(../blocks/section-title/_theme/_dark/section-title_theme_dark.css);
 
 /*Section-subtitle*/
 @import url(../blocks/section-subtitle/section-subtitle.css);
-@import url(../blocks/section-subtitle/_theme_dark/section-subtitle_theme_dark.css);
+@import url(../blocks/section-subtitle/_theme/_dark/section-subtitle_theme_dark.css);
 
 /*table*/
 @import url(../blocks/table/table.css);
 @import url(../blocks/table/__cell/table__cell.css);
 @import url(../blocks/table/__heading/table__heading.css);
-@import url(../blocks/table/__heading/_theme_dark/table__heading_theme_dark.css);
+@import url(../blocks/table/__heading/_theme/_dark/table__heading_theme_dark.css);
+@import url(../blocks/table/__cell/_theme/_dark/table__cell_theme_dark.css);
 @import url(../blocks/table/__text/table__text.css);
-@import url(../blocks/table/__text/_theme_dark/table__text_theme_dark.css);
+@import url(../blocks/table/__text/_theme/_dark/table__text_theme_dark.css);
 @import url(../blocks/table/__quote/table__quote.css);
 
 /*feynman*/
@@ -54,15 +54,14 @@
 /*Kaufman*/
 @import url(../blocks/kaufman/kaufman.css);
 @import url(../blocks/kaufman/__triangle/kaufman__triangle.css);
-@import url(../blocks/kaufman/__triangle/_rotation/kaufman__triangle_rotation.css);
 
 /*Footer*/
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__columns/footer__columns.css);
 @import url(../blocks/footer/__column/column.css);
-@import url(../blocks/footer/__column/_content_copyright/footer__column_content_copyright.css);
-@import url(../blocks/footer/__column/_content_social/footer__column_content_social.css);
-@import url(../blocks/footer/__column/_content_info/footer__column_content_info.css);
+@import url(../blocks/footer/__column/_content/_copyright/footer__column_content_copyright.css);
+@import url(../blocks/footer/__column/_content/_social/footer__column_content_social.css);
+@import url(../blocks/footer/__column/_content/_info/footer__column_content_info.css);
 @import url(../blocks/footer/__column-heading/footer__column-heading.css);
 @import url(../blocks/footer/__column-links/footer__column-links.css);
 @import url(../blocks/footer/__social-icon/footer__social-icon.css);
