--- a/blocks/cards/__item/cards__item.css
+++ b/blocks/cards/__item/cards__item.css
@@ -3,5 +3,6 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    width: 240px
+    width: 240px;
+    list-style-type: none;
 }
