--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -3,6 +3,7 @@
     width: 920px;
     margin: 0 auto 0 auto;
     flex-wrap: wrap;
+    padding: 0;
 }
 
 .cards .cards__item:nth-child(2){
@@ -12,3 +13,4 @@
 .cards .cards__item:nth-child(5){
     margin: 0 100px 0 100px;
 }
+
