--- a/blocks/video/__iframes/video__iframes.css
+++ b/blocks/video/__iframes/video__iframes.css
@@ -2,6 +2,7 @@
     margin-top: 50px;
     display: flex;
     justify-content: center;
+    list-style-type: none;
 }
 
 .video__iframes .video__iframe:nth-child(1){
