--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,9 @@
+/*Normilize*/
+@import url(../styles/normalize.css);
+
 /*Rotation*/
 @import url(../blocks/rotation/rotation.css);
+
 
 /*Header*/
 @import url(../blocks/header/header.css);
