--- a/blocks/khan/__book-pic/khan__book-pic.css
+++ b/blocks/khan/__book-pic/khan__book-pic.css
@@ -1,7 +1,7 @@
 .khan__book-pic{
-    margin: 0 48px -90px 0;
-    object-fit: contain;
-    object-position: left;
-    width: 620px;
-    height: 608px;
+    margin-right: 48px;
+    object-fit: cover;
+    object-position: left top;
+    width: 608px;
+    height: 620px;
 }
